[package]
name = "mountain-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8"
embedded-io = "0.6"
embedded-io-async = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
embedded-io = "0.6"
embedded-io-adapters = { version = "0.6", features = ["tokio-1"] }
embedded-io-async = { version = "0.6" }
tokio-test = { version = "0.4.2" }
# futures = { version = "0.3.21" }
