[package]
name = "mountain-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8"

embedded-io = { version = "0.6", optional = true }
embedded-io-async = { version = "0.6", optional = true }

embedded-hal-async = { version = "1.0", optional = true }

tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-hal-async = "1.0"
tokio-test = { version = "0.4.2" }

[features]
default = ["tokio", "embedded-io-async", "embedded-hal-async"]
tokio = ["dep:tokio", "std"]
embedded-io-async = ["dep:embedded-io-async", "dep:embedded-io"]
embedded-hal-async = ["dep:embedded-hal-async"]
std = []
