[package]
edition = "2021"
name = "embassy-example-rp2350w"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# We can't run tests etc. on embedded, so specifically skip them to avoid spurious rust-analyzer errors.
# This is a more precise solution than adding `"rust-analyzer.cargo.allTargets": false` to vs code settings, since it only
# disables tests for embedded main, leaving them enabled for non-embedded crates so we can still see errors in test code there.
[[bin]]
name = "embassy-example-rp2350w"
test = false
doctest = false
bench = false

[dependencies]
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
] }
embassy-rp = { version = "0.8.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xa"
] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "icmp",
  "tcp",
  "udp",
  "raw",
  "dhcpv4",
  "medium-ethernet",
  "dns",
  # "proto-ipv4",
  # "proto-ipv6",
  # "multicast",
] }
embassy-futures = { version = "0.1.2" }
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.9.2"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
mountain-mqtt = { path = "../mountain-mqtt", default-features = false, features = [
  "embedded-io-async",
  "embedded-hal-async",
  "defmt",
] }
mountain-mqtt-embassy = { path = "../mountain-mqtt-embassy" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
