[package]
name = "mountain-mqtt-embassy"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mqtt", "embassy"]
categories = [
  "asynchronous",
  "embedded",
  "network-programming",
  "no-std::no-alloc",
  "encoding",
]
description = "A no_std compatible, async MQTT v5 client for embassy, using mountain-mqtt"
repository = "https://github.com/mountainlizard/mountain-mqtt-embassy"
readme = "README.md"

[dependencies]

heapless = "0.8"

embassy-net = { version = "0.7.0", features = [
  "tcp",
  "udp",
  "raw",
  "dhcpv4",
  "medium-ethernet",
  "dns",
] }

embassy-sync = { version = "0.6.2" }

embassy-time = { version = "0.4.0" }

embassy-futures = { version = "0.1.1" }

defmt = { version = "1.0", optional = true }

log = { version = "0.4", optional = true }

embedded-io-async = { version = "0.6.1" }

mountain-mqtt = { version = "0.2.0", path = "../mountain-mqtt", default-features = false, features = [
  "embedded-io-async",
  "embedded-hal-async",
] }

[features]
default = ["defmt"]

defmt = [
  "dep:defmt",
  "embassy-net/defmt",
  "embassy-sync/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embedded-io-async/defmt-03",
  "mountain-mqtt/defmt",
]

log = ["dep:log", "embassy-net/log", "embassy-sync/log", "embassy-time/log"]
